my first commit

--- a/public/images/index.html
+++ b/public/images/index.html
@@ -2,27 +2,15 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Real Estate</title>
-    <link
-      href="https://fonts.googleapis.com/css?family=Cormorant+Garamond&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      href="https://fonts.googleapis.com/css?family=Cutive+Mono&display=swap"
-      rel="stylesheet"
-    />
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDN-XpZLe7cM3hk-527R02uhMC7G--BMEo&libraries=places"></script>
-    <link
-      href="https://fonts.googleapis.com/css?family=Alex+Brush&display=swap"
-      rel="stylesheet"
-    />
+    <title>Pivot a Blog</title>
+    
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="Jesseskralskis"
       content="Web site created using create-react-app"
     />
-
+  
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
